css styling updates

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <body>
   <h1>Classic Blackjack</h1>
   <div class="container">
-    <input type="text" placeholder="Your name here">
+    <p> Player: <input type="text" placeholder="Your name here"></p>
     <button id="start">Start Game</button>
     <button id="hit">Draw Card</button>
     <p id="cards">Cards ~</p>
     <p id="bank">Bank ~</p>
     <p id="message">INSERT ANY MESSAGES TO A PLAYER HERE</p>
+    <p id="player"></p>
     <p>Directions: Begin by entering your name in the provided box, and then click 'Start Game'. Player will begin with $300 in the bank, and each hand will be worth $100. Once player reaches $1,000, they have won the table. The player can then restart with a $100 on the table, or leave with their winnings.</p>
   </div>
 </body>
