--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p> Player: <input type="text" placeholder="Your name here"></p>
     <button id="start">Start Game</button>
     <button id="hit">Draw Card</button>
+    <button id="hit">New Hand</button>
     <p id="cards">Cards ~</p>
     <p id="bank">Bank ~</p>
     <p id="message">INSERT ANY MESSAGES TO A PLAYER HERE</p>
