--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <button id="hit">Draw Card</button>
     <button id="hit">New Hand</button>
     <p id="cards">Cards ~</p>
+    <p id="dealer">Dealer ~</p>
     <p id="bank">Bank ~</p>
     <p id="message">INSERT ANY MESSAGES TO A PLAYER HERE</p>
     <p id="player"></p>
