--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <p id="dealer">Dealer ~</p>
     <p id="bank">Bank ~</p>
     <p id="message">INSERT ANY MESSAGES TO A PLAYER HERE</p>
-    <p id="player"></p>
-    <p id="direct">Directions: Begin by entering your name in the provided box, and then click 'Start Game'. Player will begin with $300 in the bank, and each hand will be worth $100. Once player reaches $1,000, they have won the table. The player can then restart with a $300 on the table, or leave with their winnings.</p>
+    <a target="_blank" id="instructions" href="instructions.html">Instructions</a>
   </div>
 </body>
 </html>
