--- a/instructions.html
+++ b/instructions.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>Classic Blackjack</h1>
-  <p id="direct">Directions: Begin by clicking 'Start Game'. Player will begin with $300 in the bank, and each hand will be worth $100. Once player reaches $1,000, they have won the table. The player can then restart with a $300 on the table, or leave with their winnings.</p>
+  <p id="direct">Instructions: Begin by clicking 'Start Game'. Player will begin with $300 in the bank, and each hand will be worth $100. Once player reaches $1,000, they have won the table. The player can then restart with a $300 on the table, or leave with their winnings.</p>
   <a target="_blank" id="instructions" href="index.html">Home</a>  
 </div>
 </html>
