--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <button id="start">Start Game</button>
     <button id="hit">Draw Card</button>
     <button id="hit">New Hand</button>
-    <p id="cards">Cards ~</p>
-    <p id="dealer">Dealer ~</p>
+    <ul id="cards">Cards ~</ul>
+    <ul id="dealer">Dealer ~</ul>
     <p id="bank">Bank ~</p>
     <p id="message">INSERT ANY MESSAGES TO A PLAYER HERE</p>
     <a target="_blank" id="instructions" href="instructions.html">Instructions</a>
