--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 </head>
 <body>
   <h1>Classic Blackjack</h1>
-  <div class="container">
     <button id="start">Start Game</button>
-    <button id="hit">Draw Card</button>
-    <button id="hit">New Hand</button>
-    <ul id="cards">Cards ~</ul>
-    <ul id="dealer">Dealer ~</ul>
+    <button id="hit">Hit</button>
+    <button id="stay">Stay</button>
+    <button id="replay">New Hand</button>
+  <div class="container">
+    <p id="cards">Player Cards:</p>
+    <div id="pcard"></div>
+    <p id="dealer">Dealer:</p>
+    <div id="dcard"></div>
+  </div>
     <p id="bank">Bank ~</p>
     <p id="message">INSERT ANY MESSAGES TO A PLAYER HERE</p>
     <a target="_blank" id="instructions" href="instructions.html">Instructions</a>
-  </div>
 </body>
 </html>
