various updates to logic/functions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
     <p id="cards">Player Cards:</p>
     <div id="pcard"></div>
-    <p id="dealer">Dealer:</p>
+    <p id="dealer">Dealer Cards:</p>
     <div id="dcard"></div>
   </div>
     <p id="bank">Bank ~</p>
