--- a/instructions.html
+++ b/instructions.html
@@ -10,7 +10,8 @@
 </head>
 <body>
   <h1>Classic Blackjack</h1>
-  <p id="direct">Instructions: Begin by clicking 'Start Game'. Player will begin with $300 in the bank, and each hand will be worth $100. Once player reaches $1,000, they have won the table. The player can then restart with a $300 on the table, or leave with their winnings.</p>
+  <p id="direct">Instructions: Begin by clicking 'Start Game'. The player and dealer will both be dealt two cards face-up to begin. The player is given two opportunities to utilize 'hit' to obtain another card from the deck. The object being to obtain a score of 21 as in classic Blackjack.</p>
+  <p id="banksy">Bank: Player will begin with $300 in the bank, and each hand will be worth $100. Once player reaches $1,000, they have won the table. The player can then restart with a $300 on the table, or leave with their winnings.</p>
   <a target="_blank" id="instructions" href="index.html">Home</a>  
 </div>
 </html>
