--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="dcard"></div>
   </div>
     <p id="bank">Bank ~</p>
-    <p id="message">INSERT ANY MESSAGES TO A PLAYER HERE</p>
+    <p id="message"></p>
     <a target="_blank" id="instructions" href="instructions.html">Instructions</a>
 </body>
 </html>
