added score functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>"Two Hit" Blackjack</h1>
+  <h1>Classic Blackjack</h1>
     <button id="start">Start Game</button>
     <button id="hit">Hit</button>
     <button id="stay">Stay</button>
