update to css links

--- a/instructions.html
+++ b/instructions.html
@@ -12,6 +12,6 @@
   <h1>Classic Blackjack</h1>
   <p id="direct">Instructions: Begin by clicking 'Start Game'. The player and dealer will both be dealt two cards face-up to begin. The player is given opportunity to utilize 'hit' to obtain another card from the deck. The object being to obtain a score of 21 or have a higher scoring hand than the dealer as in classic Blackjack.</p>
   <p id="banksy">Bank: Player will begin with $300 in the bank, and each hand will be worth $100. If player achieves Blackjack they will win $200.</p>
-  <a target="_blank" id="instructions" href="index.html">Home</a>  
+  <a target="_blank" id="home" href="index.html">Home</a>  
 </div>
 </html>
