deal with a tie and issue of A reoccuring

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p id="dealer">Dealer Cards:</p>
     <div id="dcard"></div>
   </div>
-    <p id="bank">Bank ~</p>
+    <p id="bank">Bank: </p>
     <p id="message"></p>
     <a target="_blank" id="instructions" href="instructions.html">Instructions</a>
 </body>
