--- a/instructions.html
+++ b/instructions.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
   <script defer src="script.js" charset="utf-8"></script>
-  <title>Document</title>
+  <title>Classic Blackjack</title>
 </head>
 <body>
   <h1>Classic Blackjack</h1>
